@@ -3,6 +3,8 @@ NSD RELEASE NOTES
 4.1.9 (Upcoming)
 ================
 FEATURES:
+	- ip-freebind: yesno option in nsd.conf sets IP_FREEBIND socket option
+	  for Linux, binds to interfaces and addresses that are down.
 BUG FIXES:
 
 
