@@ -1,3 +1,7 @@
+15 March 2016: Wouter
+	- ip-freebind: yesno option in nsd.conf sets IP_FREEBIND socket option
+	  for Linux, binds to interfaces and addresses that are down.
+
 10 March 2016: Wouter
 	- Tag 4.1.8
 	- Trunk contains 4.1.9 in development.
